<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_popular"
        android:name="com.amaterisa.movielistapp.presentation.popularmovies.PopularMoviesFragment"
        android:label="@string/trending_label"
        tools:layout="@layout/fragment_popular_movies" />

    <fragment
        android:id="@+id/nav_home"
        android:name="com.amaterisa.movielistapp.presentation.home.HomeFragment"
        android:label="@string/movies_label"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_home_to_watch_list"
            app:destination="@id/nav_list" />

        <action
            android:id="@+id/action_home_to_popular"
            app:destination="@id/nav_popular" />

        <action
            android:id="@+id/action_home_to_search"
            app:destination="@id/nav_search" />
    </fragment>

    <fragment
        android:id="@+id/nav_list"
        android:name="com.amaterisa.movielistapp.presentation.watchlist.WatchListFragment"
        android:label="@string/watch_list_label"
        tools:layout="@layout/fragment_watch_list" />

    <fragment
        android:id="@+id/nav_search"
        android:name="com.amaterisa.movielistapp.presentation.search.SearchFragment"
        android:label="@string/search_label"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/nav_movie_details"
        android:name="com.amaterisa.movielistapp.presentation.moviedetails.MovieDetailsFragment"
        android:label="@string/movie_details_label"
        tools:layout="@layout/fragment_movie_details" >
    <argument
        android:name="movieId"
        app:argType="long"
        android:defaultValue="0L" />
    </fragment>
</navigation>